# SysMaid

./: .gitignore  README.md  README_en.md  README_zh.md  SysMaid_Tony.py  maid.py  playground.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml  python-publish.yml
action/: kill_proc.py
i18n/: en_US.json
src/: maid.py
src/SysMaid/condiction/: is_exited.py
src/sysmaid/: __init__.py  maid.py
src/sysmaid/action/: __init__.py  alarm.py  get_top_processes.py  kill_process.py  lock_volume.py  write_file.py
src/sysmaid/condiction/: __init__.py  has_no_window.py  has_windows_look_like.py  is_exited.py  is_running.py  is_too_busy.py
src/sysmaid/condition/: is_running.py  is_too_busy.py
src/sysmaid/i18n/: __init__.py  en_us.py  zh_cn.py
sysmaid/: README.md  README_en.md  __init__.py  i18n.py  maid.py  process.py  pyproject.toml  taskkill.py
sysmaid/action/: kill_proc.py  stop_service.py
sysmaid/condiction/: is_running.py  no_window.py
sysmaid/i18n/: en_US.json  zh_CN.json
tests/: test_events.py  test_simple.py  test_stress.py
