[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sysmaid"
version = "0.5.16"
authors = [
  { name="Tony Zhang", email="zhangtony239@gmail.com" },
]
description = "为 Windows 高级用户和开发者打造：一个基于Python的系统管理框架，用于轻松发现并治理那些不守规矩的后台应用和服务。"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-only" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "WMI",
    "pywin32",
    "psutil",
]

[project.optional-dependencies]
test = [
    "pytest",
]
