[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sysmaid"
version = "0.7.8"
authors = [
  { name="Tony Zhang", email="zhangtony239@gmail.com" },
]
description = "For Windows powerusers: A Python-based DSL designed to easily discover and govern unruly background applications and services."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-only" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "WMI",
    "pywin32",
    "psutil",
    "mss",
    "opencv-python"
]

[project.optional-dependencies]
test = [
    "pytest",
]
